third_party/move/move-compiler-v2/tests/ability-check/fv_enum_err.exp

Diagnostics:
error: value of type `|&mut u64|u64 has copy + store` does not have the `drop` ability
   ┌─ tests/ability-check/fv_enum_err.move:21:17
   │
21 │                 vector::pop_back(&mut v1);
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^ implicitly dropped here since it is no longer used

error: value of type `|&mut u64|u64 has copy + store` does not have the `drop` ability
   ┌─ tests/ability-check/fv_enum_err.move:22:17
   │
22 │                 vector::pop_back(&mut v1);
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^ implicitly dropped here since it is no longer used
